# fletcher-simd

./: Cargo.toml  LICENSE-BSD  README.md
.github/workflows/: rust.yml
src/: lib.rs
tests/: unit_test.rs
