[package]
name = "fletcher-simd"
version = "0.1.0"
authors = ["Christopher Tam <ohgodtamit@gmail.com>"]
edition = "2018"
description = "A SIMD implementation of the Fletcher's checksum algorithm."
readme = "README.md"
repository = "https://github.com/GodTamIt/fletcher-simd"
license = "BSD-2-Clause"
keywords = ["checksum", "fletchers", "simd"]
categories = ["algorithms"]

[dependencies]
multiversion = "0.6"
num = { version = "0.4", default-features = false }

[dev-dependencies]
byteorder = "1.4"
