[package]
name = "fletcher-simd"
version = "0.2.0"
authors = ["Christopher Tam <ohgodtamit@gmail.com>"]
edition = "2018"
description = "A SIMD implementation of the Fletcher's checksum algorithm."
readme = "README.md"
repository = "https://github.com/GodTamIt/fletcher-simd"
license = "BSD-2-Clause"
keywords = ["checksum", "fletchers", "simd"]
categories = ["algorithms"]

[dependencies]
multiversion = { version = "0.6", default-features = false }
num = { version = "0.4", default-features = false }

[dev-dependencies]
byteorder = "1.4"
rand = "0.8"

[features]
default = ["runtime_dispatch"]
runtime_dispatch = ["multiversion/std"]
